# OTUS_C

./: 1.txt  README.md
HW11_TELNET/: a.out  main.c
HW12_SERVER_HTTP/: a.out  main.c
HW12_SERVER_HTTP/test/: index.html
HW13_DB/: Makefile  compose.yaml  main.c  stats_program
HW14_CUBE/: app  cube  main.c  makefile  my_app
HW15_Snake/: shake.c
HW16_thread/: global.h  hash.c  hash.h  main.c  threaddata.c  threaddata.h  utils.c  utils.h
HW1_ENCODING/src/: const.c  const.h  main.c  utils.c  utils.h
HW2_ZipJPEG/: a.out  main.c  utils.c  utils.h  zipinfo.h
HW2_ZipJPEG/src/: main.c  utils.h
HW3_Weather/: a.out  getter.c  getter.h  getter.h.gch  mail.c  parser.c  parser.h
HW4_GTK/: hello  main.c
HW4_POSIX/clib/src/common/: change.diff  fix.c
HW5_GTK/: CMakeLists.txt  example-0  main  main.c  obraz.c  test.c  text.txt  walk_dir.c
HW6_ERROR/: Makefile  log.c  log.h  main.c
HW7_ASSEM/: asm-prog  main.c
HW8_SOCKET/: Makefile  main.c  my_prog  test.conf
HW9_CRC32/: Makefile  const.h  main.c
